--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass --watch assets/styles/ -o css",
-    "dev": "node index && sass --watch assets/styles/main.scss assets/styles/main.css"
+    "dev": "node index | sass --watch assets/styles/main.scss assets/styles/main.css"
   },
   "author": "Abdul Abbas",
   "license": "ISC",
